# goit-python

./: .gitignore
core/lesson02/: hw3.py  hw3_2.py
core/lesson04/: hw4_folder_sort_function.py
core/lesson09/: hw09.py
core/lesson12/: base.py  main.py  phonebook.py
lesson05/: hw6.py
lesson06/: hw06_sorting.py
lesson1/: hw1.py  hw2.py
lesson10/: main.py  phonebook.py
lesson11/: main.py  phonebook.py
lesson3/: hw4.py  hw4_folder_sort.py  hw_fibonachi_recursion.py
lesson4/: hw5_walk.py
lesson6/: hw06.py  hw06_sorting.py
lesson7/clean_folder/: setup.py
lesson8/: hw08.py  hw08_happy_birthday_list.py
lesson9/: hw09.py
web/lesson01/: data.json  hw01_1.py  hw01_2.py
web/lesson02/src/: notes.py  (+2 more)
web/lesson03/helperteam/: Notes.py  README.md  base.py  birthlist.py  clean.py  dockerfile  main.py  phonebook.py  pyproject.toml
web/lesson04/: Dockerfile  app.py  test.py
web/lesson05/: hw05.py
web/lesson06/: create_db.sql  main.py  requirements.txt  select_query.sql  university.db
web/lesson07/: alembic.ini  config.ini  main.py  my_select.py  requirements.txt  run_select.py  seed.py
web/lesson08/: README.md  requirements.txt
web/lesson09/: README.MD  authors.json  cache.py  config.ini  main.py  models.py  quotes.json  requirements.txt
web/lesson10/: .env.example  README.md  requirements.txt
web/lesson11/: README.md  alembic.ini  main.py  requirements.txt
web/lesson12/: README.md  alembic.ini  main.py  requirements.txt
web/lesson13/: README.md  docker-compose.yml  main.py  requirements.txt
web/lesson14/: alembic.ini  requirements.txt
(+101 files in other folders)
