[tool.poetry]
name = "helperteam"
version = "1.1.1"
description = "Personal assistant"
authors = ["Sergey Borodin <bsy.prog@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
